React 中的样式组件

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -38,7 +38,7 @@
 }
 
 .container {
-    height: 120vw;
+    height: 100vh;
     padding: 20px;
     background: #83a4d4; /* fallback for old browsers */
     background: linear-gradient(to left, #b6fbff, #83a4d4);
